諸々実装した
